--- a/src/renderer/src/scss/main.scss
+++ b/src/renderer/src/scss/main.scss
@@ -1,14 +1,41 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
-
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 // Sidebar
 .sidebar {
-  color: #d4e8ef;
-  height: 100%;
   min-width: 250px;
+  color: #eeecec;
+  background-color: #36393F;
+}
+.logo {
+  font-family: 'Lobster', cursive;
+  font-weight: 400;
+  font-size: 40px;
+  margin-left: 10px;
   position: fixed;
-  z-index: 1000;
   top: 0;
-  left: 0;
-  overflow: hidden;
-  padding-top: 20px;
+  text-align: center;
+  max-width: 250px;
+  min-height: 65px;
+  background-color: #2F3136;
+}
+
+//Main
+.main {
+  position: relative;
+  left: 250px;
+  width: 100%;
+  top: 65px;
+}
+.mainHeader {
+  min-height: 65px;
+  background-color: #2F3136;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+}
+.spellGallery {
+  background-color: #42464D;
+}
+.spellCard :hover {
+  cursor: pointer;
 }
